ecmascript/parser/tests/test262-error-references/fail/575367951ac8635d.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/575367951ac8635d.js:1:5
  |
1 | ('\u')
  |     ^^

